--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -46,6 +46,18 @@ html, body{
     display: table;
 }
 
+#auton{
+}
+
+#teleop{
+}
+
+#endgame{
+}
+
+#postmatch{
+}
+
 #qr-code{
   text-align: center;
 }
