--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -43,18 +43,21 @@ html, body{
 }
 
 #prematch{
+    display: table;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 #auton{
 }
 
+#teleop{
+}
 
-=======
->>>>>>> parent of 0100e29 (Revert "aaa")
-=======
->>>>>>> parent of 0100e29 (Revert "aaa")
+#endgame{
+}
+
+#postmatch{
+}
+
 #qr-code{
   text-align: center;
 }
